--- a/WebApplication7/Default.css
+++ b/WebApplication7/Default.css
@@ -48,16 +48,19 @@ main {
 .btn {
     width: 100%;
     padding: 10px;
-    background: #007bff;
-    border: none;
+    background: white;
+    border: solid 1px black;
     border-radius: 5px;
-    color: #0056b3;
-    font-size: 18px;
+    color: black;
+    font-size: 16px;
     cursor: pointer;
     transition: background 1s;
 }
 
-.btn:hover { background: red; }
+    .btn:hover {
+        background: #007bff;
+        color: white;
+    }
 
 .info-box {
     border-top: solid 1px black;
